Completes the assingment

--- a/css/style.css
+++ b/css/style.css
@@ -137,10 +137,11 @@ a {
   transition: 0.5s ease-out;
 }
 
-a:hover {
-  opacity: 0.75;
+@media (hover: hover) {
+  a:hover {
+    opacity: 0.75;
+  }
 }
-
 /* Table Styles */
 .dr-table {
   width: 100%;
@@ -1318,6 +1319,7 @@ a.dr-btn {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
   color: #000;
 }
@@ -1332,6 +1334,7 @@ a.dr-btn-tp {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
   color: #000;
   border: 1px solid #000;
@@ -1343,6 +1346,7 @@ a.dr-btn.dr-btn-primary {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #0096FF;
   color: #000000;
 }
@@ -1356,6 +1360,7 @@ a.dr-btn.dr-btn-primary {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #0376c8;
     color: #000000;
   }
@@ -1366,9 +1371,10 @@ a.dr-btn-tp.dr-btn-primary {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #0096FF;
-  border: 1px solid #0096FF;
+  color: #014c81;
+  border: 1px solid #014c81;
 }
 
 button.dr-btn-primary:focus,
@@ -1383,6 +1389,7 @@ a.dr-btn.dr-btn-secondary {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #c2c2c2;
   color: #000000;
 }
@@ -1396,6 +1403,7 @@ a.dr-btn.dr-btn-secondary {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #858585;
     color: #000000;
   }
@@ -1406,9 +1414,10 @@ a.dr-btn-tp.dr-btn-secondary {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #c2c2c2;
-  border: 1px solid #c2c2c2;
+  color: #505050;
+  border: 1px solid #505050;
 }
 
 button.dr-btn-secondary:focus,
@@ -1423,6 +1432,7 @@ a.dr-btn.dr-btn-success {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #15fc62;
   color: #000000;
 }
@@ -1436,6 +1446,7 @@ a.dr-btn.dr-btn-success {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #11b848;
     color: #000000;
   }
@@ -1446,9 +1457,10 @@ a.dr-btn-tp.dr-btn-success {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #15fc62;
-  border: 1px solid #15fc62;
+  color: #0f993d;
+  border: 1px solid #0f993d;
 }
 
 button.dr-btn-success:focus,
@@ -1463,6 +1475,7 @@ a.dr-btn.dr-btn-danger {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #ff1313;
   color: #ffffff;
 }
@@ -1476,6 +1489,7 @@ a.dr-btn.dr-btn-danger {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #b10f0f;
     color: #ffffff;
   }
@@ -1486,9 +1500,10 @@ a.dr-btn-tp.dr-btn-danger {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #ff1313;
-  border: 1px solid #ff1313;
+  color: #970d0d;
+  border: 1px solid #970d0d;
 }
 
 button.dr-btn-danger:focus,
@@ -1503,6 +1518,7 @@ a.dr-btn.dr-btn-warning {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #ffab1b;
   color: #000000;
 }
@@ -1516,6 +1532,7 @@ a.dr-btn.dr-btn-warning {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #cd8915;
     color: #000000;
   }
@@ -1526,9 +1543,10 @@ a.dr-btn-tp.dr-btn-warning {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #ffab1b;
-  border: 1px solid #ffab1b;
+  color: #956513;
+  border: 1px solid #956513;
 }
 
 button.dr-btn-warning:focus,
@@ -1543,6 +1561,7 @@ a.dr-btn.dr-btn-info {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #1bfff7;
   color: #000000;
 }
@@ -1556,6 +1575,7 @@ a.dr-btn.dr-btn-info {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #1ad2cb;
     color: #000000;
   }
@@ -1566,9 +1586,10 @@ a.dr-btn-tp.dr-btn-info {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #1bfff7;
-  border: 1px solid #1bfff7;
+  color: #149e9a;
+  border: 1px solid #149e9a;
 }
 
 button.dr-btn-info:focus,
@@ -1583,6 +1604,7 @@ a.dr-btn.dr-btn-light {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #ffffff;
   color: #000000;
 }
@@ -1596,6 +1618,7 @@ a.dr-btn.dr-btn-light {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #cecece;
     color: #000000;
   }
@@ -1606,9 +1629,10 @@ a.dr-btn-tp.dr-btn-light {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #ffffff;
-  border: 1px solid #ffffff;
+  color: #d0d0d0;
+  border: 1px solid #d0d0d0;
 }
 
 button.dr-btn-light:focus,
@@ -1623,6 +1647,7 @@ a.dr-btn.dr-btn-dark {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #000000;
   color: #ffffff;
 }
@@ -1636,6 +1661,7 @@ a.dr-btn.dr-btn-dark {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #3c3c3c;
     color: #ffffff;
   }
@@ -1646,6 +1672,7 @@ a.dr-btn-tp.dr-btn-dark {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
   color: #000000;
   border: 1px solid #000000;
@@ -1663,6 +1690,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #0096FF;
   color: #000000;
 }
@@ -1675,6 +1703,7 @@ a.dr-btn-dark:focus {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #0376c8;
     color: #000000;
   }
@@ -1685,9 +1714,10 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #0096FF;
-  border: 1px solid #0096FF;
+  color: #014c81;
+  border: 1px solid #014c81;
 }
 .dr-default-theme-light button.dr-btn-primary:focus,
 .dr-default-theme-light a.dr-btn-primary:focus {
@@ -1700,6 +1730,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #c2c2c2;
   color: #000000;
 }
@@ -1712,6 +1743,7 @@ a.dr-btn-dark:focus {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #858585;
     color: #000000;
   }
@@ -1722,9 +1754,10 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #c2c2c2;
-  border: 1px solid #c2c2c2;
+  color: #505050;
+  border: 1px solid #505050;
 }
 .dr-default-theme-light button.dr-btn-secondary:focus,
 .dr-default-theme-light a.dr-btn-secondary:focus {
@@ -1737,6 +1770,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #15fc62;
   color: #000000;
 }
@@ -1749,6 +1783,7 @@ a.dr-btn-dark:focus {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #11b848;
     color: #000000;
   }
@@ -1759,9 +1794,10 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #15fc62;
-  border: 1px solid #15fc62;
+  color: #0f993d;
+  border: 1px solid #0f993d;
 }
 .dr-default-theme-light button.dr-btn-success:focus,
 .dr-default-theme-light a.dr-btn-success:focus {
@@ -1774,6 +1810,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #ff1313;
   color: #ffffff;
 }
@@ -1786,6 +1823,7 @@ a.dr-btn-dark:focus {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #b10f0f;
     color: #ffffff;
   }
@@ -1796,9 +1834,10 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #ff1313;
-  border: 1px solid #ff1313;
+  color: #970d0d;
+  border: 1px solid #970d0d;
 }
 .dr-default-theme-light button.dr-btn-danger:focus,
 .dr-default-theme-light a.dr-btn-danger:focus {
@@ -1811,6 +1850,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #ffab1b;
   color: #000000;
 }
@@ -1823,6 +1863,7 @@ a.dr-btn-dark:focus {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #cd8915;
     color: #000000;
   }
@@ -1833,9 +1874,10 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #ffab1b;
-  border: 1px solid #ffab1b;
+  color: #956513;
+  border: 1px solid #956513;
 }
 .dr-default-theme-light button.dr-btn-warning:focus,
 .dr-default-theme-light a.dr-btn-warning:focus {
@@ -1848,6 +1890,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #1bfff7;
   color: #000000;
 }
@@ -1860,6 +1903,7 @@ a.dr-btn-dark:focus {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #1ad2cb;
     color: #000000;
   }
@@ -1870,9 +1914,10 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #1bfff7;
-  border: 1px solid #1bfff7;
+  color: #149e9a;
+  border: 1px solid #149e9a;
 }
 .dr-default-theme-light button.dr-btn-info:focus,
 .dr-default-theme-light a.dr-btn-info:focus {
@@ -1885,6 +1930,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #ffffff;
   color: #000000;
 }
@@ -1897,6 +1943,7 @@ a.dr-btn-dark:focus {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #cecece;
     color: #000000;
   }
@@ -1907,9 +1954,10 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #ffffff;
-  border: 1px solid #ffffff;
+  color: #d0d0d0;
+  border: 1px solid #d0d0d0;
 }
 .dr-default-theme-light button.dr-btn-light:focus,
 .dr-default-theme-light a.dr-btn-light:focus {
@@ -1922,6 +1970,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #000000;
   color: #ffffff;
 }
@@ -1934,6 +1983,7 @@ a.dr-btn-dark:focus {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #3c3c3c;
     color: #ffffff;
   }
@@ -1944,6 +1994,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
   color: #000000;
   border: 1px solid #000000;
@@ -1959,6 +2010,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #0096FF;
   color: #000000;
 }
@@ -1971,6 +2023,7 @@ a.dr-btn-dark:focus {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #0376c8;
     color: #000000;
   }
@@ -1981,9 +2034,10 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #0096FF;
-  border: 1px solid #0096FF;
+  color: #0095ff;
+  border: 1px solid #0095ff;
 }
 .dr-default-theme-dark button.dr-btn-primary:focus,
 .dr-default-theme-dark a.dr-btn-primary:focus {
@@ -1996,6 +2050,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #c2c2c2;
   color: #000000;
 }
@@ -2008,6 +2063,7 @@ a.dr-btn-dark:focus {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #858585;
     color: #000000;
   }
@@ -2018,9 +2074,10 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #c2c2c2;
-  border: 1px solid #c2c2c2;
+  color: #b3b3b3;
+  border: 1px solid #b3b3b3;
 }
 .dr-default-theme-dark button.dr-btn-secondary:focus,
 .dr-default-theme-dark a.dr-btn-secondary:focus {
@@ -2033,6 +2090,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #15fc62;
   color: #000000;
 }
@@ -2045,6 +2103,7 @@ a.dr-btn-dark:focus {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #11b848;
     color: #000000;
   }
@@ -2055,9 +2114,10 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #15fc62;
-  border: 1px solid #15fc62;
+  color: #1cff68;
+  border: 1px solid #1cff68;
 }
 .dr-default-theme-dark button.dr-btn-success:focus,
 .dr-default-theme-dark a.dr-btn-success:focus {
@@ -2070,6 +2130,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #ff1313;
   color: #ffffff;
 }
@@ -2082,6 +2143,7 @@ a.dr-btn-dark:focus {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #b10f0f;
     color: #ffffff;
   }
@@ -2092,9 +2154,10 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #ff1313;
-  border: 1px solid #ff1313;
+  color: #ff1515;
+  border: 1px solid #ff1515;
 }
 .dr-default-theme-dark button.dr-btn-danger:focus,
 .dr-default-theme-dark a.dr-btn-danger:focus {
@@ -2107,6 +2170,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #ffab1b;
   color: #000000;
 }
@@ -2119,6 +2183,7 @@ a.dr-btn-dark:focus {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #cd8915;
     color: #000000;
   }
@@ -2129,9 +2194,10 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #ffab1b;
-  border: 1px solid #ffab1b;
+  color: #ffae22;
+  border: 1px solid #ffae22;
 }
 .dr-default-theme-dark button.dr-btn-warning:focus,
 .dr-default-theme-dark a.dr-btn-warning:focus {
@@ -2144,6 +2210,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #1bfff7;
   color: #000000;
 }
@@ -2156,6 +2223,7 @@ a.dr-btn-dark:focus {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #1ad2cb;
     color: #000000;
   }
@@ -2166,9 +2234,10 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
-  color: #1bfff7;
-  border: 1px solid #1bfff7;
+  color: #1efdf5;
+  border: 1px solid #1efdf5;
 }
 .dr-default-theme-dark button.dr-btn-info:focus,
 .dr-default-theme-dark a.dr-btn-info:focus {
@@ -2181,6 +2250,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #ffffff;
   color: #000000;
 }
@@ -2193,6 +2263,7 @@ a.dr-btn-dark:focus {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #cecece;
     color: #000000;
   }
@@ -2203,6 +2274,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
   color: #ffffff;
   border: 1px solid #ffffff;
@@ -2218,6 +2290,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: #000000;
   color: #ffffff;
 }
@@ -2230,6 +2303,7 @@ a.dr-btn-dark:focus {
     cursor: pointer;
     border-radius: 8px;
     transition: 0.5s;
+    opacity: 1;
     background: #3c3c3c;
     color: #ffffff;
   }
@@ -2240,6 +2314,7 @@ a.dr-btn-dark:focus {
   cursor: pointer;
   border-radius: 8px;
   transition: 0.5s;
+  opacity: 1;
   background: transparent;
   color: #000000;
   border: 1px solid #000000;
